--- a/News/Views/Storyboard/Base.lproj/Main.storyboard
+++ b/News/Views/Storyboard/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="kU6-kJ-nna">
                         <nil key="title"/>
-                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="kL5-mq-VXn">
+                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="kL5-mq-VXn">
                             <rect key="frame" x="104" y="5.6666666666666679" width="185" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <segments>
@@ -76,7 +76,9 @@
         <scene sceneID="K3w-nJ-HUk">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="J8B-h6-Uf3" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="News" image="newspaper.fill" catalog="system" id="Nrx-vM-Jh8"/>
+                    <tabBarItem key="tabBarItem" title="News" image="newspaper.fill" catalog="system" id="Nrx-vM-Jh8">
+                        <color key="badgeColor" systemColor="labelColor"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="rzU-up-biL">
                         <rect key="frame" x="0.0" y="59" width="393" height="96"/>
@@ -158,6 +160,9 @@
     <resources>
         <image name="newspaper.fill" catalog="system" width="128" height="112"/>
         <image name="star.fill" catalog="system" width="128" height="116"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
